; ModuleID = '/home/carl/AnghaBench/vlc/modules/mux/extr_asf.c_asf_stream_end_create.c'
source_filename = "/home/carl/AnghaBench/vlc/modules/mux/extr_asf.c_asf_stream_end_create.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { i32 }
%struct.TYPE_7__ = type { %struct.TYPE_8__* }
%struct.TYPE_8__ = type { i32, i32, i64 }

@asf_object_index_guid = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.TYPE_9__* (%struct.TYPE_7__*)* @asf_stream_end_create to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.TYPE_9__* @asf_stream_end_create(%struct.TYPE_7__* %0) #0 {
  %2 = alloca %struct.TYPE_7__*, align 8
  %3 = alloca %struct.TYPE_8__*, align 8
  %4 = alloca %struct.TYPE_9__*, align 8
  %5 = alloca i32, align 4
  store %struct.TYPE_7__* %0, %struct.TYPE_7__** %2, align 8
  %6 = load %struct.TYPE_7__*, %struct.TYPE_7__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %6, i32 0, i32 0
  %8 = load %struct.TYPE_8__*, %struct.TYPE_8__** %7, align 8
  store %struct.TYPE_8__* %8, %struct.TYPE_8__** %3, align 8
  store %struct.TYPE_9__* null, %struct.TYPE_9__** %4, align 8
  %9 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %10 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %9, i32 0, i32 2
  %11 = load i64, i64* %10, align 8
  %12 = icmp ne i64 %11, 0
  br i1 %12, label %13, label %24

13:                                               ; preds = %1
  %14 = call %struct.TYPE_9__* @block_Alloc(i32 12)
  store %struct.TYPE_9__* %14, %struct.TYPE_9__** %4, align 8
  %15 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %16 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = call i32 @bo_init(i32* %5, i32 %17, i32 12)
  %19 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %20 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %19, i32 0, i32 1
  %21 = load i32, i32* %20, align 4
  %22 = add nsw i32 %21, 1
  store i32 %22, i32* %20, align 4
  %23 = call i32 @asf_chunk_add(i32* %5, i32 17700, i32 0, i32 0, i32 %21)
  br label %38

24:                                               ; preds = %1
  %25 = call %struct.TYPE_9__* @block_Alloc(i32 56)
  store %struct.TYPE_9__* %25, %struct.TYPE_9__** %4, align 8
  %26 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  %27 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %26, i32 0, i32 0
  %28 = load i32, i32* %27, align 4
  %29 = call i32 @bo_init(i32* %5, i32 %28, i32 56)
  %30 = call i32 @bo_add_guid(i32* %5, i32* @asf_object_index_guid)
  %31 = call i32 @bo_addle_u64(i32* %5, i32 56)
  %32 = load %struct.TYPE_8__*, %struct.TYPE_8__** %3, align 8
  %33 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %32, i32 0, i32 0
  %34 = call i32 @bo_add_guid(i32* %5, i32* %33)
  %35 = call i32 @bo_addle_u64(i32* %5, i32 10000000)
  %36 = call i32 @bo_addle_u32(i32* %5, i32 5)
  %37 = call i32 @bo_addle_u32(i32* %5, i32 0)
  br label %38

38:                                               ; preds = %24, %13
  %39 = load %struct.TYPE_9__*, %struct.TYPE_9__** %4, align 8
  ret %struct.TYPE_9__* %39
}

declare dso_local %struct.TYPE_9__* @block_Alloc(i32) #1

declare dso_local i32 @bo_init(i32*, i32, i32) #1

declare dso_local i32 @asf_chunk_add(i32*, i32, i32, i32, i32) #1

declare dso_local i32 @bo_add_guid(i32*, i32*) #1

declare dso_local i32 @bo_addle_u64(i32*, i32) #1

declare dso_local i32 @bo_addle_u32(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
